// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroControlPanel adds achievement to hero of JavaZone achievement type shows achievement form 1`] = `
<div
  className="MuiPaper-root-3 MuiPaper-elevation2-7 MuiPaper-rounded-4 class_1-paper-129"
>
  <h4
    className="MuiTypography-root-30 MuiTypography-h4-45"
  >
    Add achievement
  </h4>
  <form>
    <div
      className="MuiFormControl-root-177"
    >
      <label
        className="MuiFormLabel-root-192 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189"
        data-shrink={false}
      >
        Achievement
      </label>
      <div
        className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root-199"
        >
          <select
            aria-invalid={false}
            autoFocus={true}
            className="MuiSelect-select-200 MuiInputBase-input-229 MuiInput-input-214"
            disabled={false}
            multiple={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
          >
            <option />
            <option
              value="FOREDRAGSHOLDER_JZ"
            >
              JavaZone foredragsholder
            </option>
            <option
              value="FOREDRAGSHOLDER_JAVABIN"
            >
              Foredragsholder JavaBin
            </option>
            <option
              value="STYRE"
            >
              Styre
            </option>
          </select>
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-145 MuiSelect-icon-205"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-177"
      >
        <label
          className="MuiFormLabel-root-192 MuiFormLabel-filled-196 MuiFormLabel-required-197 MuiInputLabel-required-185 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189 MuiInputLabel-shrink-188"
          data-shrink={true}
        >
          JavaZone year
          <span
            className="MuiFormLabel-asterisk-198"
          >
             *
          </span>
        </label>
        <div
          className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
          onClick={[Function]}
        >
          <div
            className="MuiSelect-root-199"
          >
            <select
              aria-invalid={false}
              className="MuiSelect-select-200 MuiInputBase-input-229 MuiInput-input-214"
              disabled={false}
              multiple={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={true}
              value={2018}
            >
              <option
                value={2018}
              >
                2018
              </option>
              <option
                value={2017}
              >
                2017
              </option>
              <option
                value={2016}
              >
                2016
              </option>
              <option
                value={2015}
              >
                2015
              </option>
              <option
                value={2014}
              >
                2014
              </option>
              <option
                value={2013}
              >
                2013
              </option>
              <option
                value={2012}
              >
                2012
              </option>
              <option
                value={2011}
              >
                2011
              </option>
              <option
                value={2010}
              >
                2010
              </option>
              <option
                value={2009}
              >
                2009
              </option>
              <option
                value={2008}
              >
                2008
              </option>
            </select>
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-145 MuiSelect-icon-205"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-177"
      >
        <label
          className="MuiFormLabel-root-192 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189"
          data-shrink={false}
        >
          Talk title
        </label>
        <div
          className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            className="MuiInputBase-input-229 MuiInput-input-214"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-82 MuiButtonBase-disabled-83 MuiButton-root-95 MuiButton-text-97 MuiButton-textPrimary-98 MuiButton-flat-100 MuiButton-flatPrimary-101 MuiButton-disabled-115"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="submit"
    >
      <span
        className="MuiButton-label-96"
      >
        Submit
      </span>
    </button>
  </form>
  <a
    className="MuiButtonBase-root-82 MuiButton-root-95 MuiButton-text-97 MuiButton-flat-100"
    href="#test/heroes/2"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="MuiButton-label-96"
    >
      Back
    </span>
    <span
      className="MuiTouchRipple-root-121"
    />
  </a>
</div>
`;

exports[`HeroControlPanel adds achievement to hero shows JavaBin achievement type 1`] = `
<div
  className="MuiPaper-root-3 MuiPaper-elevation2-7 MuiPaper-rounded-4 class_1-paper-129"
>
  <h4
    className="MuiTypography-root-30 MuiTypography-h4-45"
  >
    Add achievement
  </h4>
  <form>
    <div
      className="MuiFormControl-root-177"
    >
      <label
        className="MuiFormLabel-root-192 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189"
        data-shrink={false}
      >
        Achievement
      </label>
      <div
        className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root-199"
        >
          <select
            aria-invalid={false}
            autoFocus={true}
            className="MuiSelect-select-200 MuiInputBase-input-229 MuiInput-input-214"
            disabled={false}
            multiple={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
          >
            <option />
            <option
              value="FOREDRAGSHOLDER_JZ"
            >
              JavaZone foredragsholder
            </option>
            <option
              value="FOREDRAGSHOLDER_JAVABIN"
            >
              Foredragsholder JavaBin
            </option>
            <option
              value="STYRE"
            >
              Styre
            </option>
          </select>
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-145 MuiSelect-icon-205"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-177"
      >
        <label
          className="MuiFormLabel-root-192 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189"
          data-shrink={false}
        >
          Title
        </label>
        <div
          className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            className="MuiInputBase-input-229 MuiInput-input-214"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-177"
      >
        <label
          className="MuiFormLabel-root-192 MuiFormLabel-filled-196 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189 MuiInputLabel-shrink-188"
          data-shrink={true}
        >
          Date
        </label>
        <div
          className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            className="MuiInputBase-input-229 MuiInput-input-214 MuiInputBase-inputType-232 MuiInput-inputType-217"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="date"
            value="2017-01-30"
          />
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-82 MuiButtonBase-disabled-83 MuiButton-root-95 MuiButton-text-97 MuiButton-flat-100 MuiButton-disabled-115"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-96"
      >
        Submit
      </span>
    </button>
  </form>
  <a
    className="MuiButtonBase-root-82 MuiButton-root-95 MuiButton-text-97 MuiButton-flat-100"
    href="#test/heroes/2"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="MuiButton-label-96"
    >
      Back
    </span>
    <span
      className="MuiTouchRipple-root-121"
    />
  </a>
</div>
`;

exports[`HeroControlPanel adds achievement to hero shows board member achievement type 1`] = `
<div
  className="MuiPaper-root-3 MuiPaper-elevation2-7 MuiPaper-rounded-4 class_1-paper-129"
>
  <h4
    className="MuiTypography-root-30 MuiTypography-h4-45"
  >
    Add achievement
  </h4>
  <form>
    <div
      className="MuiFormControl-root-177"
    >
      <label
        className="MuiFormLabel-root-192 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189"
        data-shrink={false}
      >
        Achievement
      </label>
      <div
        className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root-199"
        >
          <select
            aria-invalid={false}
            autoFocus={true}
            className="MuiSelect-select-200 MuiInputBase-input-229 MuiInput-input-214"
            disabled={false}
            multiple={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
          >
            <option />
            <option
              value="FOREDRAGSHOLDER_JZ"
            >
              JavaZone foredragsholder
            </option>
            <option
              value="FOREDRAGSHOLDER_JAVABIN"
            >
              Foredragsholder JavaBin
            </option>
            <option
              value="STYRE"
            >
              Styre
            </option>
          </select>
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-145 MuiSelect-icon-205"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-177"
      >
        <label
          className="MuiFormLabel-root-192 MuiFormLabel-filled-196 MuiFormLabel-required-197 MuiInputLabel-required-185 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189 MuiInputLabel-shrink-188"
          data-shrink={true}
        >
          Role
          <span
            className="MuiFormLabel-asterisk-198"
          >
             *
          </span>
        </label>
        <div
          className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
          onClick={[Function]}
        >
          <div
            className="MuiSelect-root-199"
          >
            <select
              aria-invalid={false}
              className="MuiSelect-select-200 MuiInputBase-input-229 MuiInput-input-214"
              disabled={false}
              multiple={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={true}
              value="BOARD_MEMBER"
            >
              <option
                value="BOARD_MEMBER"
              >
                Board member
              </option>
              <option
                value="VICE_CHAIR"
              >
                Vice chair
              </option>
              <option
                value="CHAIR"
              >
                Chair
              </option>
            </select>
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-145 MuiSelect-icon-205"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-177"
      >
        <label
          className="MuiFormLabel-root-192 MuiFormLabel-filled-196 MuiFormLabel-required-197 MuiInputLabel-required-185 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189 MuiInputLabel-shrink-188"
          data-shrink={true}
        >
          Elected year
          <span
            className="MuiFormLabel-asterisk-198"
          >
             *
          </span>
        </label>
        <div
          className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
          onClick={[Function]}
        >
          <div
            className="MuiSelect-root-199"
          >
            <select
              aria-invalid={false}
              className="MuiSelect-select-200 MuiInputBase-input-229 MuiInput-input-214"
              disabled={false}
              multiple={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={true}
              value="2018"
            >
              <option
                value="2018"
              >
                2018
              </option>
              <option
                value="2017"
              >
                2017
              </option>
              <option
                value="2016"
              >
                2016
              </option>
              <option
                value="2015"
              >
                2015
              </option>
              <option
                value="2014"
              >
                2014
              </option>
              <option
                value="2013"
              >
                2013
              </option>
              <option
                value="2012"
              >
                2012
              </option>
              <option
                value="2011"
              >
                2011
              </option>
              <option
                value="2010"
              >
                2010
              </option>
              <option
                value="2009"
              >
                2009
              </option>
              <option
                value="2008"
              >
                2008
              </option>
            </select>
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-145 MuiSelect-icon-205"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-82 MuiButton-root-95 MuiButton-text-97 MuiButton-textPrimary-98 MuiButton-flat-100 MuiButton-flatPrimary-101"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-96"
      >
        Submit
      </span>
      <span
        className="MuiTouchRipple-root-121"
      />
    </button>
  </form>
  <a
    className="MuiButtonBase-root-82 MuiButton-root-95 MuiButton-text-97 MuiButton-flat-100"
    href="#test/heroes/2"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="MuiButton-label-96"
    >
      Back
    </span>
    <span
      className="MuiTouchRipple-root-121"
    />
  </a>
</div>
`;

exports[`HeroControlPanel lists achievements for hero 1`] = `
<div
  className="MuiPaper-root-3 MuiPaper-elevation1-6 MuiPaper-rounded-4 MuiCard-root-132 Component-paper-131"
>
  <div
    className="MuiCardHeader-root-133"
  >
    <div
      className="MuiCardHeader-avatar-134"
    >
      <div
        className="MuiAvatar-root-86 MuiAvatar-colorDefault-87"
      >
        S
      </div>
    </div>
    <div
      className="MuiCardHeader-content-136"
    >
      <span
        className="MuiTypography-root-30 MuiTypography-body2-38 MuiCardHeader-title-137"
      >
        Some test
      </span>
      <span
        className="MuiTypography-root-30 MuiTypography-body2-38 MuiTypography-colorTextSecondary-63 MuiCardHeader-subheader-138"
      >
        test@example.com undefined
      </span>
    </div>
    <div
      className="MuiCardHeader-action-135"
    >
      <a
        className="MuiButtonBase-root-82 MuiIconButton-root-139"
        href="#test/"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiIconButton-label-144"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-145"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-121"
        />
      </a>
    </div>
  </div>
  <div
    className="MuiCardContent-root-154"
  >
    <h2
      className="MuiTypography-root-30 MuiTypography-h5-46 MuiTypography-gutterBottom-57"
    >
      Achievements
    </h2>
    <ul
      className="MuiList-root-66 MuiList-padding-67"
    >
      <li
        className="MuiListItem-container-71"
      >
        <div
          className="MuiButtonBase-root-82 MuiListItem-root-70 MuiListItem-default-73 MuiListItem-gutters-78 MuiListItem-button-79 MuiListItem-secondaryAction-80"
          href="#test//heroes/2/achievement/11"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="MuiAvatar-root-86 MuiAvatar-colorDefault-87"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-145"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
          <div
            className="MuiListItemText-root-89"
          >
            <span
              className="MuiTypography-root-30 MuiTypography-subheading-37 MuiListItemText-primary-92"
            >
              A great girl
            </span>
          </div>
          <span
            className="MuiTouchRipple-root-121"
          />
        </div>
        <div
          className="MuiListItemSecondaryAction-root-155"
        >
          <button
            className="MuiButtonBase-root-82 MuiIconButton-root-139"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-144"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-145"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-121"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiListItem-container-71"
      >
        <div
          className="MuiButtonBase-root-82 MuiListItem-root-70 MuiListItem-default-73 MuiListItem-gutters-78 MuiListItem-button-79 MuiListItem-secondaryAction-80"
          href="#test//heroes/2/achievement/12"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="MuiAvatar-root-86 MuiAvatar-colorDefault-87"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-145"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
          <div
            className="MuiListItemText-root-89"
          >
            <span
              className="MuiTypography-root-30 MuiTypography-subheading-37 MuiListItemText-primary-92"
            >
              A super guy!
            </span>
          </div>
          <span
            className="MuiTouchRipple-root-121"
          />
        </div>
        <div
          className="MuiListItemSecondaryAction-root-155"
        >
          <button
            className="MuiButtonBase-root-82 MuiIconButton-root-139"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-144"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-145"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-121"
            />
          </button>
        </div>
      </li>
    </ul>
  </div>
  <div
    className="MuiCardActions-root-172"
  >
    <a
      className="MuiButtonBase-root-82 MuiButton-root-95 MuiButton-text-97 MuiButton-textPrimary-98 MuiButton-flat-100 MuiButton-flatPrimary-101 MuiButton-sizeSmall-118 MuiCardActions-action-174"
      href="#test//heroes/2/edit"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="MuiButton-label-96"
      >
        Edit
      </span>
      <span
        className="MuiTouchRipple-root-121"
      />
    </a>
    <a
      className="MuiButtonBase-root-82 MuiButton-root-95 MuiButton-text-97 MuiButton-textPrimary-98 MuiButton-flat-100 MuiButton-flatPrimary-101 MuiButton-sizeSmall-118 MuiCardActions-action-174"
      href="#test//heroes/2/addAchievement"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="MuiButton-label-96"
      >
        Add achievement
      </span>
      <span
        className="MuiTouchRipple-root-121"
      />
    </a>
  </div>
</div>
`;

exports[`HeroControlPanel shows achievement update 1`] = `
<div
  className="MuiPaper-root-3 MuiPaper-elevation2-7 MuiPaper-rounded-4 class_1-paper-129"
>
  <h3>
    Update achievement
  </h3>
  <form>
    <div>
      <div
        className="MuiFormControl-root-177"
      >
        <label
          className="MuiFormLabel-root-192 MuiFormLabel-filled-196 MuiFormLabel-required-197 MuiInputLabel-required-185 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189 MuiInputLabel-shrink-188"
          data-shrink={true}
        >
          Role
          <span
            className="MuiFormLabel-asterisk-198"
          >
             *
          </span>
        </label>
        <div
          className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
          onClick={[Function]}
        >
          <div
            className="MuiSelect-root-199"
          >
            <select
              aria-invalid={false}
              className="MuiSelect-select-200 MuiInputBase-input-229 MuiInput-input-214"
              disabled={false}
              multiple={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={true}
              value="BOARD_MEMBER"
            >
              <option
                value="BOARD_MEMBER"
              >
                Board member
              </option>
              <option
                value="VICE_CHAIR"
              >
                Vice chair
              </option>
              <option
                value="CHAIR"
              >
                Chair
              </option>
            </select>
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-145 MuiSelect-icon-205"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-177"
      >
        <label
          className="MuiFormLabel-root-192 MuiFormLabel-filled-196 MuiFormLabel-required-197 MuiInputLabel-required-185 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189 MuiInputLabel-shrink-188"
          data-shrink={true}
        >
          Elected year
          <span
            className="MuiFormLabel-asterisk-198"
          >
             *
          </span>
        </label>
        <div
          className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
          onClick={[Function]}
        >
          <div
            className="MuiSelect-root-199"
          >
            <select
              aria-invalid={false}
              className="MuiSelect-select-200 MuiInputBase-input-229 MuiInput-input-214"
              disabled={false}
              multiple={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={true}
              value={2019}
            >
              <option
                value="2018"
              >
                2018
              </option>
              <option
                value="2017"
              >
                2017
              </option>
              <option
                value="2016"
              >
                2016
              </option>
              <option
                value="2015"
              >
                2015
              </option>
              <option
                value="2014"
              >
                2014
              </option>
              <option
                value="2013"
              >
                2013
              </option>
              <option
                value="2012"
              >
                2012
              </option>
              <option
                value="2011"
              >
                2011
              </option>
              <option
                value="2010"
              >
                2010
              </option>
              <option
                value="2009"
              >
                2009
              </option>
              <option
                value="2008"
              >
                2008
              </option>
            </select>
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-145 MuiSelect-icon-205"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-82 MuiButton-root-95 MuiButton-text-97 MuiButton-textPrimary-98 MuiButton-flat-100 MuiButton-flatPrimary-101"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-96"
      >
        Submit
      </span>
      <span
        className="MuiTouchRipple-root-121"
      />
    </button>
    <a
      className="MuiButtonBase-root-82 MuiButton-root-95 MuiButton-text-97 MuiButton-flat-100"
      href="#test/heroes/2"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="MuiButton-label-96"
      >
        Back
      </span>
      <span
        className="MuiTouchRipple-root-121"
      />
    </a>
  </form>
</div>
`;

exports[`HeroControlPanel shows hero edit view 1`] = `
<div
  className="MuiPaper-root-3 MuiPaper-elevation2-7 MuiPaper-rounded-4 class_1-paper-129"
>
  <h2>
    Some test
     (edit)
  </h2>
  <form
    onSubmit={[Function]}
  >
    <div>
      <div
        className="MuiFormControl-root-177"
      >
        <label
          className="MuiFormLabel-root-192 MuiFormLabel-filled-196 MuiFormLabel-required-197 MuiInputLabel-required-185 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189 MuiInputLabel-shrink-188"
          data-shrink={true}
        >
          Display name
          <span
            className="MuiFormLabel-asterisk-198"
          >
             *
          </span>
        </label>
        <div
          className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={true}
            className="MuiInputBase-input-229 MuiInput-input-214"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={true}
            type="text"
            value="Some test"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-177"
      >
        <label
          className="MuiFormLabel-root-192 MuiFormLabel-filled-196 MuiFormLabel-required-197 MuiInputLabel-required-185 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189 MuiInputLabel-shrink-188"
          data-shrink={true}
        >
          Email address
          <span
            className="MuiFormLabel-asterisk-198"
          >
             *
          </span>
        </label>
        <div
          className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={true}
            className="MuiInputBase-input-229 MuiInput-input-214 MuiInputBase-inputType-232 MuiInput-inputType-217"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={true}
            type="email"
            value="test@example.com"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-177"
      >
        <label
          className="MuiFormLabel-root-192 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189"
          data-shrink={false}
        >
          Twitter handle
        </label>
        <div
          className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={true}
            className="MuiInputBase-input-229 MuiInput-input-214 MuiInputBase-inputType-232 MuiInput-inputType-217"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type=""
          />
        </div>
      </div>
    </div>
    <div>
      <button
        className="MuiButtonBase-root-82 MuiButton-root-95 MuiButton-text-97 MuiButton-textPrimary-98 MuiButton-flat-100 MuiButton-flatPrimary-101"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="submit"
      >
        <span
          className="MuiButton-label-96"
        >
          Lagre
        </span>
        <span
          className="MuiTouchRipple-root-121"
        />
      </button>
    </div>
  </form>
  <a
    className="MuiButtonBase-root-82 MuiButton-root-95 MuiButton-text-97 MuiButton-flat-100"
    href="#test/heroes/2"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="MuiButton-label-96"
    >
      Back
    </span>
    <span
      className="MuiTouchRipple-root-121"
    />
  </a>
</div>
`;

exports[`HeroControlPanel shows hero status 1`] = `
<div
  className="MuiPaper-root-3 MuiPaper-elevation2-7 MuiPaper-rounded-4 class_1-paper-129"
>
  <div
    className="MuiPaper-root-3 MuiPaper-elevation1-6 MuiPaper-rounded-4 MuiCard-root-132 Component-paper-131"
  >
    <div
      className="MuiCardHeader-root-133"
    >
      <div
        className="MuiCardHeader-avatar-134"
      >
        <div
          className="MuiAvatar-root-86 MuiAvatar-colorDefault-87"
        >
          S
        </div>
      </div>
      <div
        className="MuiCardHeader-content-136"
      >
        <span
          className="MuiTypography-root-30 MuiTypography-body2-38 MuiCardHeader-title-137"
        >
          Some test
        </span>
        <span
          className="MuiTypography-root-30 MuiTypography-body2-38 MuiTypography-colorTextSecondary-63 MuiCardHeader-subheader-138"
        >
          test@example.com undefined
        </span>
      </div>
      <div
        className="MuiCardHeader-action-135"
      >
        <a
          className="MuiButtonBase-root-82 MuiIconButton-root-139"
          href="#test"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiIconButton-label-144"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-145"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-121"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiCardContent-root-154"
    >
      <h2
        className="MuiTypography-root-30 MuiTypography-h5-46 MuiTypography-gutterBottom-57"
      >
        Achievements
      </h2>
      <ul
        className="MuiList-root-66 MuiList-padding-67"
      >
        <li
          className="MuiListItem-container-71"
        >
          <div
            className="MuiButtonBase-root-82 MuiListItem-root-70 MuiListItem-default-73 MuiListItem-gutters-78 MuiListItem-button-79 MuiListItem-secondaryAction-80"
            href="#test/heroes/2/achievement/11"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="MuiAvatar-root-86 MuiAvatar-colorDefault-87"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-145"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <div
              className="MuiListItemText-root-89"
            >
              <span
                className="MuiTypography-root-30 MuiTypography-subheading-37 MuiListItemText-primary-92"
              >
                A great girl
              </span>
            </div>
            <span
              className="MuiTouchRipple-root-121"
            />
          </div>
          <div
            className="MuiListItemSecondaryAction-root-155"
          >
            <button
              className="MuiButtonBase-root-82 MuiIconButton-root-139"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiIconButton-label-144"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-145"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root-121"
              />
            </button>
          </div>
        </li>
        <li
          className="MuiListItem-container-71"
        >
          <div
            className="MuiButtonBase-root-82 MuiListItem-root-70 MuiListItem-default-73 MuiListItem-gutters-78 MuiListItem-button-79 MuiListItem-secondaryAction-80"
            href="#test/heroes/2/achievement/12"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="MuiAvatar-root-86 MuiAvatar-colorDefault-87"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-145"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <div
              className="MuiListItemText-root-89"
            >
              <span
                className="MuiTypography-root-30 MuiTypography-subheading-37 MuiListItemText-primary-92"
              >
                A super guy!
              </span>
            </div>
            <span
              className="MuiTouchRipple-root-121"
            />
          </div>
          <div
            className="MuiListItemSecondaryAction-root-155"
          >
            <button
              className="MuiButtonBase-root-82 MuiIconButton-root-139"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiIconButton-label-144"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-145"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root-121"
              />
            </button>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="MuiCardActions-root-172"
    >
      <a
        className="MuiButtonBase-root-82 MuiButton-root-95 MuiButton-text-97 MuiButton-textPrimary-98 MuiButton-flat-100 MuiButton-flatPrimary-101 MuiButton-sizeSmall-118 MuiCardActions-action-174"
        href="#test/heroes/2/edit"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiButton-label-96"
        >
          Edit
        </span>
        <span
          className="MuiTouchRipple-root-121"
        />
      </a>
      <a
        className="MuiButtonBase-root-82 MuiButton-root-95 MuiButton-text-97 MuiButton-textPrimary-98 MuiButton-flat-100 MuiButton-flatPrimary-101 MuiButton-sizeSmall-118 MuiCardActions-action-174"
        href="#test/heroes/2/addAchievement"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiButton-label-96"
        >
          Add achievement
        </span>
        <span
          className="MuiTouchRipple-root-121"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`HeroControlPanel shows list of current heroes 1`] = `
<div
  className="MuiPaper-root-3 MuiPaper-elevation2-7 MuiPaper-rounded-4 class_1-paper-2"
>
  <h4
    className="MuiTypography-root-30 MuiTypography-h4-45"
  >
    Heroes
  </h4>
  <ul
    className="MuiList-root-66 MuiList-padding-67"
  >
    <div
      className="MuiButtonBase-root-82 MuiListItem-root-70 MuiListItem-default-73 MuiListItem-gutters-78 MuiListItem-button-79"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="MuiListItemIcon-root-85"
      >
        <div
          className="MuiAvatar-root-86 MuiAvatar-colorDefault-87"
        />
      </div>
      <div
        className="MuiListItemText-root-89"
      >
        <span
          className="MuiTypography-root-30 MuiTypography-subheading-37 MuiListItemText-primary-92"
        >
          Johannes Test
        </span>
        <p
          className="MuiTypography-root-30 MuiTypography-body1-39 MuiTypography-colorTextSecondary-63 MuiListItemText-secondary-93"
        >
          johannes@example.com
        </p>
      </div>
      <span
        className="MuiTouchRipple-root-121"
      />
    </div>
    <div
      className="MuiButtonBase-root-82 MuiListItem-root-70 MuiListItem-default-73 MuiListItem-gutters-78 MuiListItem-button-79"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="MuiListItemIcon-root-85"
      >
        <div
          className="MuiAvatar-root-86 MuiAvatar-colorDefault-87"
        />
      </div>
      <div
        className="MuiListItemText-root-89"
      >
        <span
          className="MuiTypography-root-30 MuiTypography-subheading-37 MuiListItemText-primary-92"
        >
          Some test
        </span>
        <p
          className="MuiTypography-root-30 MuiTypography-body1-39 MuiTypography-colorTextSecondary-63 MuiListItemText-secondary-93"
        >
          test@example.com
        </p>
      </div>
      <span
        className="MuiTouchRipple-root-121"
      />
    </div>
  </ul>
  <a
    className="MuiButtonBase-root-82 MuiButton-root-95 MuiButton-contained-106 MuiButton-containedPrimary-107 MuiButton-raised-109 MuiButton-raisedPrimary-110"
    href="#test/heroes/add"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="MuiButton-label-96"
    >
      Add hero
    </span>
    <span
      className="MuiTouchRipple-root-121"
    />
  </a>
</div>
`;

exports[`HeroControlPanel shows new hero screen 1`] = `
<div
  className="MuiPaper-root-3 MuiPaper-elevation2-7 MuiPaper-rounded-4 class_1-paper-176"
>
  <form
    onSubmit={[Function]}
  >
    <h4
      className="MuiTypography-root-30 MuiTypography-h4-45"
    >
      Add a hero
    </h4>
    <div>
      <div
        className="MuiFormControl-root-177"
      >
        <label
          className="MuiFormLabel-root-192 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189"
          data-shrink={false}
          htmlFor="add-hero-slack-member"
        >
          Select from slack:
        </label>
        <div
          className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
          onClick={[Function]}
        >
          <div
            className="MuiSelect-root-199"
          >
            <select
              aria-invalid={false}
              autoFocus={true}
              className="MuiSelect-select-200 MuiInputBase-input-229 MuiInput-input-214"
              disabled={false}
              id="add-hero-slack-member"
              multiple={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              value=""
            >
              <option />
              <option
                value="johannes@example.com"
              >
                Johannes Brodwall
                 &lt;
                johannes@example.com
                &gt;
              </option>
              <option
                value="alice@example.com"
              >
                Alice
                 &lt;
                alice@example.com
                &gt;
              </option>
              <option
                value="bob@example.net"
              >
                Bob
                 &lt;
                bob@example.net
                &gt;
              </option>
            </select>
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-145 MuiSelect-icon-205"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-177"
      >
        <label
          className="MuiFormLabel-root-192 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189"
          data-shrink={false}
        >
          Name
        </label>
        <div
          className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            className="MuiInputBase-input-229 MuiInput-input-214"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="MuiFormControl-root-177"
      >
        <label
          className="MuiFormLabel-root-192 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189"
          data-shrink={false}
        >
          Email
        </label>
        <div
          className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            className="MuiInputBase-input-229 MuiInput-input-214"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="MuiFormControl-root-177"
      >
        <label
          className="MuiFormLabel-root-192 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189"
          data-shrink={false}
        >
          Twitter
        </label>
        <div
          className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            className="MuiInputBase-input-229 MuiInput-input-214"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div>
      <button
        className="MuiButtonBase-root-82 MuiButton-root-95 MuiButton-contained-106 MuiButton-containedPrimary-107 MuiButton-raised-109 MuiButton-raisedPrimary-110"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="submit"
      >
        <span
          className="MuiButton-label-96"
        >
          Submit
        </span>
        <span
          className="MuiTouchRipple-root-121"
        />
      </button>
      <button
        className="MuiButtonBase-root-82 MuiButton-root-95 MuiButton-contained-106 MuiButton-raised-109"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-96"
        >
          Cancel
        </span>
        <span
          className="MuiTouchRipple-root-121"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`HeroControlPanel udpates hero name 1`] = `
<div
  className="MuiPaper-root-3 MuiPaper-elevation2-7 MuiPaper-rounded-4 class_1-paper-129"
>
  <h2>
    Updated name
     (edit)
  </h2>
  <form
    onSubmit={[Function]}
  >
    <div>
      <div
        className="MuiFormControl-root-177"
      >
        <label
          className="MuiFormLabel-root-192 MuiFormLabel-filled-196 MuiFormLabel-required-197 MuiInputLabel-required-185 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189 MuiInputLabel-shrink-188"
          data-shrink={true}
        >
          Display name
          <span
            className="MuiFormLabel-asterisk-198"
          >
             *
          </span>
        </label>
        <div
          className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={true}
            className="MuiInputBase-input-229 MuiInput-input-214"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={true}
            type="text"
            value="Updated name"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-177"
      >
        <label
          className="MuiFormLabel-root-192 MuiFormLabel-filled-196 MuiFormLabel-required-197 MuiInputLabel-required-185 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189 MuiInputLabel-shrink-188"
          data-shrink={true}
        >
          Email address
          <span
            className="MuiFormLabel-asterisk-198"
          >
             *
          </span>
        </label>
        <div
          className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={true}
            className="MuiInputBase-input-229 MuiInput-input-214 MuiInputBase-inputType-232 MuiInput-inputType-217"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={true}
            type="email"
            value="johannes@example.com"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-177"
      >
        <label
          className="MuiFormLabel-root-192 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189"
          data-shrink={false}
        >
          Twitter handle
        </label>
        <div
          className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={true}
            className="MuiInputBase-input-229 MuiInput-input-214 MuiInputBase-inputType-232 MuiInput-inputType-217"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type=""
          />
        </div>
      </div>
    </div>
    <div>
      <button
        className="MuiButtonBase-root-82 MuiButton-root-95 MuiButton-text-97 MuiButton-textPrimary-98 MuiButton-flat-100 MuiButton-flatPrimary-101"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="submit"
      >
        <span
          className="MuiButton-label-96"
        >
          Lagre
        </span>
        <span
          className="MuiTouchRipple-root-121"
        />
      </button>
    </div>
  </form>
  <a
    className="MuiButtonBase-root-82 MuiButton-root-95 MuiButton-text-97 MuiButton-flat-100"
    href="#test/heroes/1"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="MuiButton-label-96"
    >
      Back
    </span>
    <span
      className="MuiTouchRipple-root-121"
    />
  </a>
</div>
`;

exports[`HeroControlPanel updates speaker achievement 1`] = `
<div
  className="MuiPaper-root-3 MuiPaper-elevation2-7 MuiPaper-rounded-4 class_1-paper-129"
>
  <h3>
    Update achievement
  </h3>
  <form>
    <div>
      <div
        className="MuiFormControl-root-177"
      >
        <label
          className="MuiFormLabel-root-192 MuiFormLabel-filled-196 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189 MuiInputLabel-shrink-188"
          data-shrink={true}
        >
          Title
        </label>
        <div
          className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            className="MuiInputBase-input-229 MuiInput-input-214"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value="Updated title"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        className="MuiFormControl-root-177"
      >
        <label
          className="MuiFormLabel-root-192 MuiFormLabel-filled-196 MuiInputLabel-root-181 MuiInputLabel-formControl-186 MuiInputLabel-animated-189 MuiInputLabel-shrink-188"
          data-shrink={true}
        >
          Date
        </label>
        <div
          className="MuiInputBase-root-219 MuiInput-root-206 MuiInput-underline-210 MuiInputBase-formControl-220 MuiInput-formControl-207"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            className="MuiInputBase-input-229 MuiInput-input-214 MuiInputBase-inputType-232 MuiInput-inputType-217"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="date"
            value="2018/10/15"
          />
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-82 MuiButton-root-95 MuiButton-text-97 MuiButton-flat-100"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-96"
      >
        Submit
      </span>
      <span
        className="MuiTouchRipple-root-121"
      />
    </button>
    <a
      className="MuiButtonBase-root-82 MuiButton-root-95 MuiButton-text-97 MuiButton-flat-100"
      href="#test/heroes/2"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="MuiButton-label-96"
      >
        Back
      </span>
      <span
        className="MuiTouchRipple-root-121"
      />
    </a>
  </form>
</div>
`;
